fix z-index drawer + header + filter_element

--- a/src/Styles/Drawer.css
+++ b/src/Styles/Drawer.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(111, 111, 111, 0.9);
-    z-index: 5;
+    z-index: 30;
     top: 0;
     right: 0;
     transition: opacity 1s ease-out;
@@ -16,7 +16,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(111, 111, 111, 0.9);
-    z-index: 5;
+    z-index: 30;
     top: 0;
     right: 0;
     transition: 0.4s easy;
