--- a/src/Styles/GlobalStyle.css
+++ b/src/Styles/GlobalStyle.css
@@ -90,7 +90,7 @@ a, a:visited{
     font-weight: 600;
     flex-direction: row;
     position: fixed;
-    z-index: 10;
+    z-index: 100;
 }
 
 .logo {
